refactor(auth): update 12 files

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       <aside class="side-panel">
         <h2>Moves</h2>
         <ul id="moves-list"></ul>
+        <button id="exit-replay-btn" class="primary-btn hidden">Exit Replay</button>
         <button id="save-game-btn" class="primary-btn">Save Game</button>
         <button id="reset-btn" class="primary-btn">Reset Game</button>
         <button id="draw-btn" class="primary-btn">Offer Draw</button>
