--- a/login.html
+++ b/login.html
@@ -20,8 +20,8 @@
 
       <form id="login-form" class="auth-form">
         <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required placeholder="Enter your email">
+          <label for="email">Email or Username</label>
+          <input type="text" id="email" name="email" required placeholder="Enter your email or username">
         </div>
 
         <div class="form-group">
