profile and account transfer system, user sync manager, and related handlers.

--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
   <script src="admin-features.js"></script>
   <script src="debugger.js"></script>
   <script src="debugger-integration.js"></script>
+  <script src="user-sync-client.js"></script>
 
 </body>
 </html>
