--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
           <span class="pill-label">Dark mode</span>
         </button>
 
+        <button id="settings-btn" class="pill-btn">
+          <span class="pill-icon">⚙️</span>
+          <span class="pill-label">Settings</span>
+        </button>
+
         <div class="dropdown">
           <button id="menu-btn" class="pill-btn menu-btn">
             <span class="menu-icon">☰</span>
@@ -47,13 +52,8 @@
             <button id="bot-mode" data-mode="bot" class="dropdown-item">Bot</button>
             <button id="online-mode" data-mode="online" class="dropdown-item">Online</button>
             <button id="lobby-btn" class="dropdown-item">Lobby</button>
-            <button id="profile-btn" class="dropdown-item">Profile</button>
-            <button id="theme-btn" class="dropdown-item">🎨 Themes</button>
-            <button id="manage-bans-btn" class="dropdown-item">🔒 Manage Bans</button>
-            <button id="report-btn" class="dropdown-item">📢 Report Player</button>
             <button id="friends-btn" class="dropdown-item">👥 Friends</button>
-            <button id="login-btn" class="dropdown-item">Login</button>
-            <button id="register-btn" class="dropdown-item">Register</button>
+            <button id="report-btn" class="dropdown-item">📢 Report Player</button>
           </div>
         </div>
 
@@ -308,6 +308,7 @@
   <script src="debugger.js"></script>
   <script src="debugger-integration.js"></script>
   <script src="user-sync-client.js"></script>
+  <script src="settings-button.js"></script>
 
 </body>
 </html>
