Update auth.js, Update forgot-password.js, Update index.html

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
   </div>
 
   <!-- CHESS.JS + SCRIPT -->
+  <script src="encryption.js"></script>
   <script src="chess.js"></script>
   <script src="friends.js"></script>
   <script src="client-anti-cheat.js"></script>
