admin additional admin account, "674121bruh

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="friends.css" />
   <link rel="stylesheet" href="admin-features.css" />
   <link rel="stylesheet" href="debugger.css" />
+  <link rel="stylesheet" href="game-enhancements.css" />
+  <link rel="stylesheet" href="button-variants.css" />
+  <link rel="stylesheet" href="complete-enhancements.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,6 +58,8 @@
             <button id="friends-btn" class="dropdown-item">👥 Friends</button>
             <button id="report-btn" class="dropdown-item">📢 Report Player</button>
             <button id="checkers-mode" class="dropdown-item">♟️ Play Checkers</button>
+            <button id="server-status-btn" class="dropdown-item">🖥️ Server Status</button>
+            <button id="manage-bans-btn" class="dropdown-item">🚫 Ban Management</button>
           </div>
         </div>
 
@@ -312,6 +317,7 @@
 
   <!-- CHESS.JS + SCRIPT -->
   <script src="encryption.js"></script>
+  <script src="auth.js"></script>
   <script src="chess.js"></script>
   <script src="friends.js"></script>
   <script src="client-anti-cheat.js"></script>
@@ -324,6 +330,8 @@
   <script src="debugger-integration.js"></script>
   <script src="user-sync-client.js"></script>
   <script src="settings-button.js"></script>
+  <script src="game-enhancements.js"></script>
+  <script src="screen-reader-simple.js"></script>
 
 </body>
 </html>
