--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" required placeholder="Enter your password">
+          <input type="password" id="password" name="password" autocomplete="current-password" required placeholder="Enter your password">
         </div>
 
         <div class="form-options">
@@ -47,6 +47,7 @@
     </div>
   </div>
 
+  <script src="encryption.js"></script>
   <script src="auth.js"></script>
 </body>
 </html>
