--- a/register.html
+++ b/register.html
@@ -31,12 +31,12 @@
 
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" required placeholder="Create a password">
+          <input type="password" id="password" name="password" autocomplete="new-password" required placeholder="Create a password">
         </div>
 
         <div class="form-group">
           <label for="confirm-password">Confirm Password</label>
-          <input type="password" id="confirm-password" name="confirm-password" required placeholder="Confirm your password">
+          <input type="password" id="confirm-password" name="confirm-password" autocomplete="new-password" required placeholder="Confirm your password">
         </div>
 
         <div class="form-options">
@@ -56,6 +56,7 @@
     </div>
   </div>
 
+  <script src="encryption.js"></script>
   <script src="auth.js"></script>
 </body>
 </html>
